--- a/css/style.css
+++ b/css/style.css
@@ -127,8 +127,13 @@ a {
 /* Hero */
 /* Тимчасовий фон */
 .hero {
+  max-width: 1600px;
   padding-top: 200px;
-  padding-bottom: 200px;
+  padding-bottom: 250px;
+  padding-left: 452px;
+  padding-right: 452px;
+  margin-left: auto;
+  margin-right: auto;
 
   background-color: #2f303a;
 
@@ -185,7 +190,7 @@ button {
   margin-left: 30px;
 }
 .section {
-  margin-bottom: 94px;
+  padding-bottom: 94px;
 }
 
 .section-title {
@@ -214,9 +219,13 @@ button {
 
 /* Section 2 */
 
+.section.item {
+  margin-bottom: 0;
+  padding-bottom: 94px;
+}
+
 .section-img {
   display: flex;
-
   width: calc(100% - 60px / 3);
 }
 
@@ -254,8 +263,10 @@ button {
   letter-spacing: 0.03em;
 }
 
-.section.people .section-title {
+.section.people {
   padding-top: 94px;
+  margin-bottom: 0;
+  padding-bottom: 94px;
 }
 
 .work-title {
@@ -265,10 +276,6 @@ button {
   font-size: 16px;
   line-height: 1.18;
   letter-spacing: 0.03em;
-}
-
-.section.people {
-  margin-bottom: 94px;
 }
 
 .work-people + .work-people {
@@ -357,7 +364,7 @@ footer {
 /* Navigation buttons */
 .container.button-elements {
   padding-top: 94px;
-  padding-bottom: 50px;
+  margin-bottom: 50px;
 }
 
 .radio-button {
@@ -388,7 +395,7 @@ footer {
 }
 
 /* Work */
-.wirk-card {
+.work-card {
   margin-left: auto;
   margin-right: auto;
 }
